node selection stuff - dirty code

--- a/Community Detection Functions.ipynb
+++ b/Community Detection Functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "546fc102",
+   "id": "40ba49a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,18 +164,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fly_mat = pd.read_csv('science.add9330_data_s1_to_s4/Supplementary-Data-S1/all-all_connectivity_matrix.csv').drop(columns=['Unnamed: 0'])\n",
-    "fly_mat = fly_mat.to_numpy()\n",
-    "# Convert fly matrix into binary adjacency matrix\n",
-    "fly_mat[fly_mat > 0] = 1\n",
-    "fly_mat[fly_mat != 1] = 0\n",
-    "fly_mat[np.identity(fly_mat.shape[0], dtype=bool)] = 0.\n",
-    "fly_graph = fly_mat\n",
-    "# Make random graph\n",
-    "rand_graph = nx.fast_gnp_random_graph(fly_graph.shape[0], np.sum(fly_graph) / (fly_graph.shape[0] ** 2))\n",
-    "rand_graph = nx.to_numpy_array(rand_graph)\n",
-    "# remove self recurrent connections\n",
-    "rand_graph[np.identity(rand_graph.shape[0], dtype=bool)] = 0."
+    "# fly_mat = pd.read_csv('science.add9330_data_s1_to_s4/Supplementary-Data-S1/all-all_connectivity_matrix.csv').drop(columns=['Unnamed: 0'])\n",
+    "# fly_mat = fly_mat.to_numpy()\n",
+    "# # Convert fly matrix into binary adjacency matrix\n",
+    "# fly_mat[fly_mat > 0] = 1\n",
+    "# fly_mat[fly_mat != 1] = 0\n",
+    "# fly_mat[np.identity(fly_mat.shape[0], dtype=bool)] = 0.\n",
+    "# fly_graph = fly_mat\n",
+    "# # Make random graph\n",
+    "# rand_graph = nx.fast_gnp_random_graph(fly_graph.shape[0], np.sum(fly_graph) / (fly_graph.shape[0] ** 2))\n",
+    "# rand_graph = nx.to_numpy_array(rand_graph)\n",
+    "# # remove self recurrent connections\n",
+    "# rand_graph[np.identity(rand_graph.shape[0], dtype=bool)] = 0."
    ]
   },
   {
@@ -195,15 +195,15 @@
     }
    ],
    "source": [
-    "print('fly density: ', np.sum(fly_mat.reshape(-1))/(fly_mat.shape[0]*fly_mat.shape[1]))\n",
-    "print('ran density: ', np.sum(rand_graph.reshape(-1))/(rand_graph.shape[0]*rand_graph.shape[1]))\n",
-    "print(f\"Fly graph {np.sum(fly_graph)} edges, rand graph {np.sum(rand_graph)} edges\")"
+    "# print('fly density: ', np.sum(fly_mat.reshape(-1))/(fly_mat.shape[0]*fly_mat.shape[1]))\n",
+    "# print('ran density: ', np.sum(rand_graph.reshape(-1))/(rand_graph.shape[0]*rand_graph.shape[1]))\n",
+    "# print(f\"Fly graph {np.sum(fly_graph)} edges, rand graph {np.sum(rand_graph)} edges\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b7513dfe",
+   "id": "25def881",
    "metadata": {
     "scrolled": true
    },
@@ -218,24 +218,24 @@
     }
    ],
    "source": [
-    "communities_list  = getCommunities(fly_graph, 3, 1, 10)\n",
-    "communities_list1  = getCommunities(fly_graph, 3, 1, 10, leiden=False)"
+    "# communities_list  = getCommunities(fly_graph, 3, 1, 10)\n",
+    "# communities_list1  = getCommunities(fly_graph, 3, 1, 10, leiden=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9ea1d31c",
+   "id": "1961cab7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "leid, louv = [x[1] for x in communities_list], [x[1] for x in communities_list1]"
+    "# leid, louv = [x[1] for x in communities_list], [x[1] for x in communities_list1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "eddbbc11",
+   "id": "3208d10f",
    "metadata": {},
    "outputs": [
     {
@@ -250,11 +250,11 @@
     }
    ],
    "source": [
-    "c = 0\n",
-    "for i in range(len(leid)):\n",
-    "    if leid[i] == louv[i]:\n",
-    "        c += 1\n",
-    "c"
+    "# c = 0\n",
+    "# for i in range(len(leid)):\n",
+    "#     if leid[i] == louv[i]:\n",
+    "#         c += 1\n",
+    "# c"
    ]
   },
   {
@@ -277,13 +277,13 @@
     }
    ],
    "source": [
-    "nx.draw(G_fly, node_size = 4, width = 0.1, node_color = [x[1] for x in communities_list])"
+    "# nx.draw(G_fly, node_size = 4, width = 0.1, node_color = [x[1] for x in communities_list])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ce740758",
+   "id": "31a8b4a0",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,28 @@
     }
    ],
    "source": [
-    "nx.draw(G_fly, node_size = 4, width = 0.1, node_color = [x[1] for x in communities_list1])"
+    "# nx.draw(G_fly, node_size = 4, width = 0.1, node_color = [x[1] for x in communities_list1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c9549183",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4472135954999579"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.2**0.5"
    ]
   },
   {
@@ -442,7 +463,7 @@
     }
    ],
    "source": [
-    "getNodeInformation(fly_graph, communities_list, 0)"
+    "# getNodeInformation(fly_graph, communities_list, 0)"
    ]
   }
  ],
